# NewBankWidget

./: .env_sample  .gitignore  README.md  config.py  main.py  pyproject.toml
src/: custom_errors.py  decorators.py  design.py  external_api.py  generators.py  masks.py  processing.py  user_interface.py  utils.py  widget.py
test/: test_masks.py  test_processing.py  test_widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
